--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,4 +1,9 @@
 <header>
   <h2>{{ title }}</h2>
-  <app-button color="green" text="Add"></app-button>
+
+  <app-button
+  color="green"
+  text="Add"
+  (btnClick)="toggleAddTask()">
+</app-button>
 </header>
